--- a/index.html
+++ b/index.html
@@ -1,62 +1,66 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analytics PRO</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        body { background: #0f1218; color: white; font-family: 'Segoe UI', sans-serif; padding: 15px; }
-        .card { background: rgba(255,255,255,0.05); border-radius: 15px; padding: 20px; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 15px; }
-        .title { color: #00d2ff; font-weight: bold; margin-bottom: 10px; }
-        .row { display: flex; justify-content: space-between; margin: 8px 0; font-size: 14px; }
-        .pro-btn { background: linear-gradient(45deg, #ffcc00, #ff9500); border: none; width: 100%; padding: 12px; border-radius: 10px; font-weight: bold; margin-top: 10px; cursor: pointer; }
-        .channel-item { border-left: 3px solid #00d2ff; padding-left: 10px; margin: 10px 0; background: rgba(0,210,255,0.05); padding: 5px; }
+        body { background: #0b0e14; color: white; font-family: sans-serif; padding: 15px; margin: 0; }
+        .glass-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 15px; padding: 15px; margin-bottom: 15px;
+        }
+        .accent { color: #00d2ff; font-weight: bold; }
+        .gold { color: #ffcc00; font-weight: bold; }
+        .btn-pro {
+            background: linear-gradient(90deg, #ffcc00, #ff9500);
+            border: none; width: 100%; padding: 12px; border-radius: 10px;
+            font-weight: bold; margin-top: 10px; cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <div class="card">
-        <div class="title">📡 ПОДКЛЮЧЕННЫЕ КАНАЛЫ</div>
-        <div class="channel-item">
-            <div class="row"><b>@my_channel</b> <span>1,240 сабов</span></div>
-            <div class="row"><small>Статус: Аналитика активна</small></div>
+    <div class="glass-card">
+        <div class="gold">📈 ОБЩАЯ СТАТИСТИКА</div>
+        <canvas id="mainChart" height="150"></canvas>
+    </div>
+
+    <div class="glass-card">
+        <div class="accent">📡 ПОДКЛЮЧЕННЫЕ КАНАЛЫ</div>
+        <div id="channel-list" style="margin-top:10px; font-size: 14px; opacity: 0.8;">
+            Загрузка из базы бота...
         </div>
     </div>
 
-    <div class="card">
-        <div class="title">📈 AI-АНАЛИТИКА (ERR)</div>
-        <canvas id="chart" height="150"></canvas>
-        <div class="row"><span>Вовлеченность:</span> <span style="color:#00ff88">14.2% (Высокая)</span></div>
-        <div class="row"><span>Лучшее время:</span> <span>19:00 - 21:00</span></div>
-    </div>
-
-    <div class="card" style="border: 1px solid #ffcc0033;">
-        <div class="title" style="color:#ffcc00">💎 PRO ОТЧЕТЫ</div>
-        <p style="font-size: 12px; opacity: 0.8;">Создайте профессиональный PDF-отчет для рекламодателя с графиками и охватами.</p>
-        <button class="pro-btn" onclick="buyPro()">АКТИВИРОВАТЬ PRO</button>
+    <div class="glass-card">
+        <div class="gold">💎 PRO ОТЧЕТНОСТЬ</div>
+        <p style="font-size: 12px; opacity: 0.7;">Сгенерируйте медиа-кит для продажи рекламы в один клик.</p>
+        <button class="btn-pro" onclick="requestPro()">АКТИВИРОВАТЬ ОТЧЕТЫ</button>
     </div>
 
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand();
+        tg.headerColor = "#0b0e14";
 
-        function buyPro() {
+        function requestPro() {
             tg.sendData("buy_pro_request");
             tg.close();
         }
 
-        const ctx = document.getElementById('chart').getContext('2d');
+        const ctx = document.getElementById('mainChart').getContext('2d');
         new Chart(ctx, {
             type: 'line',
             data: {
                 labels: ['Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб', 'Вс'],
                 datasets: [{
-                    label: 'Просмотры',
-                    data: [1200, 1900, 1500, 2100, 1800, 2400, 2100],
+                    data: [400, 700, 550, 900, 800, 1200, 1100],
                     borderColor: '#00d2ff',
-                    tension: 0.3,
-                    fill: false
+                    backgroundColor: 'rgba(0, 210, 255, 0.1)',
+                    fill: true,
+                    tension: 0.4
                 }]
             },
             options: { plugins: { legend: { display: false } }, scales: { y: { display: false }, x: { grid: { display: false } } } }
