--- a/index.html
+++ b/index.html
@@ -1,59 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        body { background: #0b0e14; color: white; font-family: sans-serif; padding: 15px; }
-        .card { 
-            background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); 
-            border-radius: 20px; padding: 20px; margin-bottom: 20px;
-            backdrop-filter: blur(10px);
-        }
-        .btn { 
-            background: linear-gradient(90deg, #00d2ff, #3a7bd5); color: white; 
-            border: none; width: 100%; padding: 15px; border-radius: 12px; font-weight: bold;
-        }
-        .accent { color: #00d2ff; }
+        body { background: #0b0e14; color: #fff; font-family: -apple-system, sans-serif; padding: 15px; }
+        .card { background: rgba(255,255,255,0.05); border-radius: 18px; padding: 20px; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 15px; backdrop-filter: blur(10px); }
+        .accent { color: #00d2ff; font-weight: bold; }
+        .btn { background: linear-gradient(90deg, #ffcc00, #ff9500); border: none; width: 100%; padding: 15px; border-radius: 12px; font-weight: bold; color: #000; margin-top: 10px; }
+        h2 { font-size: 18px; margin-top: 0; }
     </style>
 </head>
 <body>
     <div class="card">
-        <h2 class="accent">📊 Аналитика</h2>
-        <canvas id="myChart" height="150"></canvas>
+        <h2>🚀 Дашборд Аналитики</h2>
+        <canvas id="chart" height="150"></canvas>
     </div>
 
     <div class="card">
-        <h3>💰 PRO Возможности</h3>
-        <ul style="font-size: 14px; opacity: 0.8;">
-            <li>Отчеты для рекламодателей (PDF)</li>
-            <li>Анализ конкурентов в реальном времени</li>
-            <li>Умное время публикации</li>
-        </ul>
-        <button class="btn" onclick="tg.sendData('buy_pro')">АКТИВИРОВАТЬ ЗА 299₽</button>
+        <h2 class="accent">💎 ПРЕИМУЩЕСТВА PRO</h2>
+        <div style="font-size: 14px; opacity: 0.8;">
+            • Мониторинг конкурентов 24/7<br>
+            • Авто-водяные знаки без лимитов<br>
+            • Отчеты для рекламодателей в PDF
+        </div>
+        <button class="btn" onclick="tg.sendData('buy_pro')">АКТИВИРОВАТЬ PRO — 299₽</button>
     </div>
 
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand();
-        
-        const ctx = document.getElementById('myChart').getContext('2d');
-        new Chart(ctx, {
+        tg.headerColor = "#0b0e14";
+
+        new Chart(document.getElementById('chart'), {
             type: 'line',
             data: {
                 labels: ['Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб', 'Вс'],
                 datasets: [{
-                    label: 'Охват',
-                    data: [500, 800, 600, 1100, 950, 1300, 1200],
+                    data: [300, 450, 380, 600, 520, 800, 750],
                     borderColor: '#00d2ff',
-                    tension: 0.4,
+                    backgroundColor: 'rgba(0, 210, 255, 0.1)',
                     fill: true,
-                    backgroundColor: 'rgba(0, 210, 255, 0.1)'
+                    tension: 0.4
                 }]
             },
-            options: { plugins: { legend: { display: false } } }
+            options: { plugins: { legend: { display: false } }, scales: { y: { display: false }, x: { grid: { display: false } } } }
         });
     </script>
 </body>
