--- a/index.html
+++ b/index.html
@@ -2,69 +2,60 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        body { background: #0f172a; color: #f8fafc; font-family: 'Inter', sans-serif; padding: 20px; }
-        .card { background: #1e293b; border-radius: 20px; padding: 20px; margin-bottom: 20px; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 1px solid #334155; }
-        .gradient-text { background: linear-gradient(90deg, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 800; font-size: 22px; }
-        .btn-main { background: #3b82f6; border: none; color: white; width: 100%; padding: 15px; border-radius: 14px; font-weight: 600; font-size: 16px; cursor: pointer; transition: 0.3s; }
-        .btn-main:active { transform: scale(0.98); }
-        .stat-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 20px; }
-        .stat-item { background: #334155; padding: 15px; border-radius: 15px; text-align: center; }
+        body { background: #05070a; color: #e2e8f0; font-family: 'Inter', sans-serif; padding: 20px; }
+        .ai-card { 
+            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+            border: 1px solid #38bdf8; border-radius: 20px; padding: 20px;
+            box-shadow: 0 0 20px rgba(56, 189, 248, 0.2); margin-bottom: 20px;
+        }
+        .btn-ai {
+            background: #38bdf8; color: #000; border: none; width: 100%;
+            padding: 15px; border-radius: 12px; font-weight: 800; cursor: pointer;
+        }
+        .stat-num { color: #38bdf8; font-size: 28px; font-weight: bold; }
     </style>
 </head>
 <body>
-    <div class="card">
-        <span class="gradient-text">ULTRA DASHBOARD</span>
-        <div style="margin-top: 15px;">
-            <canvas id="growthChart"></canvas>
+    <div class="ai-card">
+        <h2 style="margin:0; color: #38bdf8;">🧠 AI STATUS</h2>
+        <p style="opacity: 0.7;">ИИ готов к генерации контента</p>
+        <div style="display: flex; justify-content: space-around; margin-top: 20px;">
+            <div style="text-align: center;">
+                <div class="stat-num">128</div>
+                <div style="font-size: 10px;">ПОСТОВ</div>
+            </div>
+            <div style="text-align: center;">
+                <div class="stat-num">98%</div>
+                <div style="font-size: 10px;">УНИКАЛЬНОСТЬ</div>
+            </div>
         </div>
     </div>
 
-    <div class="stat-grid">
-        <div class="stat-item">
-            <div style="font-size: 12px; opacity: 0.7;">Заработок</div>
-            <div style="font-size: 18px; font-weight: 700;">450 ⭐</div>
-        </div>
-        <div class="stat-item">
-            <div style="font-size: 12px; opacity: 0.7;">Охват</div>
-            <div style="font-size: 18px; font-weight: 700;">+12.4%</div>
-        </div>
+    <div class="ai-card">
+        <h3>📈 АНАЛИЗ РОСТА</h3>
+        <canvas id="chart"></canvas>
     </div>
 
-    <div class="card">
-        <h3>💎 PRO План</h3>
-        <p style="font-size: 14px; opacity: 0.8; line-height: 1.5;">Разблокируйте AI-копирайтера, который пишет посты за вас, и систему шпионажа за 5 конкурентами одновременно.</p>
-        <button class="btn-main" onclick="buyPro()">Купить за 150 ⭐</button>
-    </div>
+    <button class="btn-ai" onclick="window.Telegram.WebApp.close()">ВЕРНУТЬСЯ В БОТА</button>
 
     <script>
-        let tg = window.Telegram.WebApp;
-        tg.expand();
-        tg.headerColor = '#0f172a';
-
-        function buyPro() {
-            tg.sendData("action_buy_pro");
-            tg.close();
-        }
-
-        const ctx = document.getElementById('growthChart').getContext('2d');
+        window.Telegram.WebApp.expand();
+        const ctx = document.getElementById('chart').getContext('2d');
         new Chart(ctx, {
             type: 'line',
             data: {
-                labels: ['Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб', 'Вс'],
+                labels: ['1','2','3','4','5'],
                 datasets: [{
-                    label: 'Просмотры',
-                    data: [1200, 1900, 3000, 5000, 4800, 7000, 8500],
+                    data: [10, 25, 45, 30, 60],
                     borderColor: '#38bdf8',
-                    backgroundColor: 'rgba(56, 189, 248, 0.1)',
-                    fill: true,
                     tension: 0.4
                 }]
             },
-            options: { plugins: { legend: { display: false } }, scales: { y: { display: false }, x: { grid: { display: false } } } }
+            options: { plugins: { legend: { display: false } } }
         });
     </script>
 </body>
